--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <h1>Text To Speech <span>Convertor</span></h1>
         <textarea name="" id="" placeholder="Write anything here..."></textarea>
         <div class="row">
-            <select name="" id=""></select>
+            <select name="" ></select>
             <button><i class="fa-solid fa-play"></i>Listen</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+     <script src="practice.js"></script>
   </body>
 </html>
