deleted practice file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <button><i class="fa-solid fa-play"></i>Listen</button>
         </div>
     </div>
-    <!-- <script src="script.js"></script> -->
-     <script src="practice.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
